<resources>
    <string name="app_name">Vicinity</string>
    <string name="prefs_file_key">com.vicinity.vicinity.PREFS_FILE_KEY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_city_hint">Detecting current location...</string>
    <string name="button_find_my_location">find my location</string>
    <string name="people_less"><![CDATA[<-]]></string>
    <string name="people_more"><![CDATA[->]]></string>
    <string name="anything">Anything...</string>
    <string name="anywhere">Anywhere...</string>
    <string name="anytime">Anytime...</string>
    <string name="is_in_your">...is in your</string>
    <string name="vicinity">V i c i n i t y</string>
    <string name="welcome">welcome</string>
    <string name="tap_the_creen">Tap the screen to proceed...</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">HOME</string>
    <string name="exit">EXIT</string>
    <string name="verify_place">VERIFY PLACE</string>
    <string name="my_places">MY PLACES</string>
    <string name="claim_places">CLAIM PLACE</string>
    <string name="no_new_notifications">No new notifications...</string>
    <string name="dismiss">dismiss</string>
    <string name="information_gathered">We have gathered all the information necessary to proceed with registering the place you were just exploring and to link it to your account. By clicking \'REGISTER\' you confirm that you are the owner or a legal representative of the business that the selected place represents and agree with this application\'s Terms of Service.</string>
    <string name="successfully_sent_submission">Your submission was sent successfully. An SMS with auto-generated verification code will be sent on the phone number, registered with the selected business. To verify your connection to the selected business you must input the received code in the field below and click \'SEND CODE\'. The received code would be valid for 6 hours since now. If you have not received an SMS within that period, please try registering the business again. Thank you for chosing \'Vicinity\'\n\n Please note that in order for the application to keep working properly, 3 seconds after clicking \'SEND CODE\' you will be Signed Out and the application will close. Then You can continue using it by simply opening it and Signing In again</string>
    <string name="enter_code">Enter code</string>
    <string name="agree">agree and continue</string>
    <string name="send">send</string>
    <string name="send_code">send code</string>
    <string name="happy">Happy-Bar</string>
    <string name="reservation_confirmed">Reservation Confirmed</string>
    <string name="answer">Answer</string>
    <string name="no_comments">No Comments are currently available...</string>
    <string name="detecting_location">Detecting your location...</string>
    <string name="nearest">nearest</string>
    <string name="sort">sort</string>
    <string name="popular">most popular</string>
    <string name="enter_name">set place name</string>
    <string name="go">go</string>
    <string name="open">Open</string>
    <string name="website">website</string>
    <string name="dial">Dial</string>
    <string name="reserve">reserve</string>
    <string name="on">On</string>
    <string name="at">At</string>
    <string name="table_for">Table for</string>
    <string name="leave_comment_for_customer">Leave a comment for the customer</string>
    <string name="decline">Decline</string>
    <string name="confirm">Confirm</string>
    <string name="bar">bar</string>
    <string name="are_you_sure">Are you sure you want to</string>
    <string name="confirm_capitals">CONFIRM</string>
    <string name="this_reservation">this reservation?</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_confirm_decide_confirm">CONFIRM</string>
    <string name="dialog_confirm_decide_decline">DECLINE</string>
    <string name="dialog_confirm_decide_send">SEND</string>
    <string name="leave_comment_reservation">Leave a comment for the reservation</string>
    <string name="proceed">Proceed</string>
    <string name="set_date">set date</string>
    <string name="set_time">set time</string>
    <string name="no_date_set">no date set</string>
    <string name="no_time_set">no time set</string>
    <string name="table_four_question_mark">table for?</string>
    <string name="new_reservation_for">New reservation for \'</string>
    <string name="set_people_at_least_one">You must set people to at least one</string>
    <string name="can_not_go_back_in_time">Can\'t go back in time, sorry... :(</string>
    <string name="log_in_failed">Login failed</string>
    <string name="could_not_connect_google">Could not connect to Google</string>
    <string name="welcome_back">"Welcome back "</string>
    <string name="comment">"Comment: "</string>
    <string name="person_persons">" person/s/"</string>
    <string name="reservation_declined">Reservation Declined</string>
    <string name="closed">Closed</string>
    <string name="successful_verification">Successful Verification</string>
    <string name="your_app_will_close">Your app will close in a second</string>
    <string name="invalid_code">Invalid code</string>
    <string name="has_not_set_website">" has not set its Website yet"</string>
    <string name="location_not_detected_yet">Location not detected yet, please wait</string>
    <string name="or_chose_type">OR SEARCH BY CATEGORY</string>
    <string name="unable_to_detecd_location">Unable to detect your location, please enter the name of your city manually</string>
    <string name="enable_gps">Enable your GPS for better positioning</string>
    <string name="dialog_answer_later_button_string">later</string>
    <string name="notifications_activity_sort_latest">latest</string>
    <string name="notifications_activity_sort_most_people">biggest</string>
    <string name="notifications_activity_sort_soonest">home</string>
    <string name="notifications_activity_exit">exit</string>
    <string name="notifications_activity_home">home</string>
    <string name="reservation_answer_dialog_new_reservation_for">New reservation for \'</string>
    <string name="reservation_sent">Reservation request sent</string>
    <string name="you_must_set_at_least">You must set people to at least one</string>
    <string name="pleace_select_time">Please, select time and date</string>
    <string name="confirm_polite">CONFIRM</string>
    <string name="no_results">No results found!</string>

</resources>
