<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_night_blurred"
    tools:context="com.vicinity.vicinity.controller.RegBusinessActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    >
    <TextView
        android:id="@+id/business_reg_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textSize="16dp"
        android:text="@string/information_gathered"/>

    <TextView
        android:id="@+id/business_reg_after_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="16dp"
        android:text="@string/successfully_sent_submission"/>

    <EditText
        android:id="@+id/business_reg_input_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_code"
        android:textAlignment="center"
        android:inputType="numberSigned"
        android:layout_above="@+id/business_reg_send_button"
        android:layout_centerHorizontal="true"/>

    <CheckBox
        android:id="@+id/business_reg_agree_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/business_reg_input_code"
        android:layout_marginTop="140dp"
        android:text="@string/agree"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/business_reg_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/send"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape_dark"/>

    <Button
        android:id="@+id/business_reg_send_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/send_code"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape_dark"/>


</RelativeLayout>
</RelativeLayout>
