<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/dialog_reserve_root"
        android:layout_width="340dp"
        android:layout_height="400dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_shape_dark">


        <EditText
            android:id="@+id/dialog_reserve_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:hint="@string/leave_comment_reservation"
            android:layout_above="@+id/linearLayout"
            android:textSize="14sp"
            android:layout_marginBottom="31dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/linearLayout">

            <Button
                android:id="@+id/dialog_reserve_proceed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_shape_dark"
                android:text="@string/proceed"/>

            <Button
                android:id="@+id/dialog_reserve_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_shape_dark"
                android:text="@string/cancel" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_date"
            android:id="@+id/dialog_reserve_set_date_button"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/dialog_reserve_set_time_button"
            android:layout_alignStart="@+id/dialog_reserve_set_time_button"
            android:background="@drawable/button_shape_dark"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:id="@+id/dialog_reserve_set_time_button"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_shape_dark"
            android:layout_below="@+id/dialog_reserve_set_date_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/dialog_reserve_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_date_set"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_toLeftOf="@+id/dialog_reserve_set_date_button"
            android:layout_above="@+id/dialog_reserve_set_time_button"
            android:layout_alignLeft="@+id/dialog_reserve_comment"
            android:layout_alignStart="@+id/dialog_reserve_comment" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_time_set"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_toLeftOf="@+id/dialog_reserve_set_time_button"
            android:id="@+id/dialog_reserve_time_tv"
            android:layout_alignLeft="@+id/dialog_reserve_date_tv"
            android:layout_alignBottom="@+id/dialog_reserve_set_time_button"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/dialog_reserve_people_number"
            android:hint="@string/table_four_question_mark"
            android:textAlignment="center"
            android:layout_below="@+id/dialog_reserve_set_time_button"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>



</RelativeLayout>
