<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_reserve_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="200dp"
    android:layout_marginBottom="150dp"
    android:background="@drawable/button_shape_dark">




        <TextView
            android:id="@+id/r_u_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/are_you_sure"
            android:textSize="17dp"
            android:textAlignment="center"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/dialog_confirm_action_type_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r_u_sure"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/confirm_capitals"
            android:textSize="20dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/this_reservation"
            android:textSize="17dp"
            android:textAlignment="center"
            android:layout_below="@+id/dialog_confirm_action_type_tv"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">


            <Button
                android:id="@+id/dialog_confirm_button_NO"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_shape_dark"
                android:layout_marginRight="5dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/dialog_confirm_button_YES"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_shape_dark"
                android:layout_marginLeft="5dp"
                android:text="@string/conf" />
        </LinearLayout>



</RelativeLayout>