<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vicinity.vicinity.controller.MainActivity">

    <!--The main Content view-->
    <FrameLayout
        android:id="@+id/main_content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>




    <!--The Nav Drawer-->
    <RelativeLayout
        android:id="@+id/nav_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#ffffffff"
        android:dividerHeight="2dp"
        android:background="@drawable/layout_shape">

        <LinearLayout
            android:id="@+id/nav_drawer_user_info_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/button_shape_light"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/nav_logged_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/nav_logged_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/nav_sign_out"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_shape_light"
                android:text="@string/sign_out"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/nav_go_home"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:background="@drawable/button_shape_light"
                android:text="@string/home"
                android:gravity="center"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/nav_exit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape_light"
                android:text="@string/exit"
                android:gravity="center"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/nav_verify_place"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape_light"
                android:text="@string/verify_place"
                android:gravity="center"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/nav_my_reservations"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape_light"
                android:text="@string/my_places"
                android:gravity="center"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/nav_my_pendings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="30sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape_light"
                android:text="@string/nav_my_pendings"
                android:gravity="center"
                android:textStyle="bold"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/nav_register_business"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:background="@drawable/button_shape_light"
            android:text="@string/claim_places"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
